[package]
name = "kvs"
version = "0.1.0"
authors = ["chux0519 <chuxdesign@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"



[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
