[package]
name = "kvs"
version = "0.1.0"
authors = ["chux0519 <chuxdesign@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = "0.2.18"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.6"
sled = "0.24.1"
criterion = "0.2"
crossbeam = "0.7.2"
num_cpus = "1.10.1"
rayon = "1.1.0"


[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "read_write_bench"
harness = false
